# PowerSimulator

./: .gitignore  AnalysisUtils.cpp  AnalysisUtils.h  CMakeLists.txt  GraphWindow.cpp  GraphWindow.h  GraphWindow.ui  Property.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  UIconfig.h  UIutils.cpp  UIutils.h  a3700n_datasource_factory.cpp  a3700n_datasource_factory.h  a3700n_window.cpp  a3700n_window.h  additional_metrics_window.cpp  additional_metrics_window.h  analysis_graph_window.cpp  analysis_graph_window.h  analysis_harmonic_page.cpp  analysis_harmonic_page.h  analysis_phasor_page.cpp  analysis_phasor_page.h  analysis_utils.cpp  analysis_utils.h  analysis_waveform_page.cpp  analysis_waveform_page.h  base_graph_window.cpp  base_graph_window.h  collapsible_groupbox.cpp  collapsible_groupbox.h  config.h  control_panel.cpp  control_panel.h  control_panel_state.h  custom_chart_view.cpp  custom_chart_view.h  (+76 more)
.gemini/: GEMINI.md
styles/: stylesheet.qss
test/: QDateTime  test_min_max.cpp
tests/: CMakeLists.txt  test_analysis_utils.cpp  test_demand_calculator.cpp  test_frequency_tracker.cpp  test_min_max.cpp  test_simulation_engine.cpp
